--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,9 @@
     "react-scripts": "4.0.2",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "uuid": "^8.3.2",
+    "uuidv4": "^6.2.7",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
